<resources>
    <string name="app_name">Cổ phiếu</string>
    <string name="ticker">Mã cổ phiếu</string>
    <string name="trading_date">Ngày giao dịch</string>
    <string name="todo">todo</string>
    <string name="price">Giá đặt</string>
    <string name="shares">Khối lượng</string>
    <string name="sell">bán</string>
    <string name="buy">Mua</string>
    <string name="invalid">"Không hợp lệ</string>
    <string name="stop_loss">Dừng lỗ</string>
    <string name="sample">sample</string>
    <string name="transaction_cost">Phí giao dịch</string>
    <string name="tax">Thuế</string>
    <string name="save">Lưu</string>
    <!-- CONSTANT -->
    <string name="CONFIG_PREFS">config_prefs</string>
</resources>