<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_cost"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/sb_cost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:max="100"
            android:progressDrawable="@drawable/seekbar_progress"
            android:tag="transaction_cost"
            android:thumb="@drawable/seekbar_thumb" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/sb_tax"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:max="100"
            android:progressDrawable="@drawable/seekbar_progress"
            android:tag="tax"
            android:thumb="@drawable/seekbar_thumb" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_stop_loss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_loss"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/sb_stop_loss"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:max="100"
            android:progressDrawable="@drawable/seekbar_progress"
            android:tag="stop_loss"
            android:thumb="@drawable/seekbar_thumb" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <Button
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/save"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>